Changed config setup for default values. Also turned SQLConnectionPool into a RawService

--- a/snapi-frontend/src/main/resources/reference.conf
+++ b/snapi-frontend/src/main/resources/reference.conf
@@ -39,6 +39,12 @@ raw {
     }
   }
 }
+raw.creds.client {
+  fdw-db-cache {
+    size = 1000
+    expiry = 1h
+  }
+}
 raw.rest.client {
   async-request-retries = 10
 
