--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -108,43 +108,42 @@ jobs:
         echo "SNAPI_CLIENT=$(cat snapi-client/version)" >> $GITHUB_ENV
         echo "SQL_CLIENT=$(cat sql-client/version)" >> $GITHUB_ENV
     - if: github.event_name == 'repository_dispatch'
-      uses: peter-evans/create-or-update-comment@v2
+      uses: peter-evans/create-or-update-comment@v4
       with:
         token: ${{ secrets.RAW_CI_PAT }}
         repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
         comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
         body: |
-          > will publish utils version: ${{ env.UTILS_VER  }}
-          > will publish client version: ${{ env.CLIENT_VER }}
-          > will publish snapi-frontend version: ${{ env.SNAPI_FRONTEND_VER }}
-          > will publish snapi-truffle version: ${{ env.SNAPI_TRUFFLE_VER }}
-          > will publish snapi-client version: ${{ env.SNAPI_CLIENT }}
-          > will publish sql-client version: ${{ env.SQL_CLIENT }}
+          > published utils version: ${{ env.UTILS_VER  }}
+          > published client version: ${{ env.CLIENT_VER }}
+          > published snapi-frontend version: ${{ env.SNAPI_FRONTEND_VER }}
+          > published snapi-truffle version: ${{ env.SNAPI_TRUFFLE_VER }}
+          > published snapi-client version: ${{ env.SNAPI_CLIENT }}
+          > published sql-client version: ${{ env.SQL_CLIENT }}
         reactions: rocket
     - if: success() && github.event_name == 'push' && contains(github.ref, 'refs/tags/')
-      uses: peter-evans/repository-dispatch@v2
+      uses: peter-evans/repository-dispatch@v3
       with:
         token: ${{ secrets.RAW_CI_PAT }}
         event-type: release
         client-payload: '{"ref": "${{ github.ref }}", "tag": "${{ github.ref_name }}"}'
     - if: success() && github.event_name == 'repository_dispatch'
-      uses: peter-evans/create-or-update-comment@v2
+      uses: peter-evans/create-or-update-comment@v4
       with:
         token: ${{ secrets.RAW_CI_PAT }}
         repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
         comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
         body: |
-          > published
-          > run [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) success :heavy_check_mark:
+          > run [${{ github.run_id }}/${{ env.GITHUB_JOB }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) success :heavy_check_mark:
         reactions: hooray
     - if: failure() && github.event_name == 'repository_dispatch'
-      uses: peter-evans/create-or-update-comment@v2
+      uses: peter-evans/create-or-update-comment@v4
       with:
         token: ${{ secrets.RAW_CI_PAT }}
         repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
         comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
         body: |
-          > run [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed :x:
+          > run [${{ github.run_id }}/${{ env.GITHUB_JOB }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed :x:
         reactions: confused
 
   publish-snapi-parser:
@@ -191,7 +190,8 @@ jobs:
             "key": "gpg.keyname",
             "value": "${{ secrets.GPG_KEYNAME }}"
           }]
-    - name: publish
+    - if: github.event_name == 'repository_dispatch'
+      name: publish to snapshots repo
       working-directory: snapi-parser
       run: |
         ./publish.sh
@@ -199,38 +199,39 @@ jobs:
     - if: github.event_name != 'repository_dispatch'
       name: release
       working-directory: snapi-parser
-      run: ./release.sh
+      run: |
+        ./release.sh
+        echo SNAPI_PARSER_VER="$(cat version)" >> $GITHUB_ENV
     - if: github.event_name == 'repository_dispatch'
-      uses: peter-evans/create-or-update-comment@v2
+      uses: peter-evans/create-or-update-comment@v4
       with:
         token: ${{ secrets.RAW_CI_PAT }}
         repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
         comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
         body: |
-          > will publish snapi-parser version: ${{ env.SNAPI_PARSER_VER }}
+          > published snapi-parser version: ${{ env.SNAPI_PARSER_VER }}
         reactions: rocket
     - if: success() && github.event_name == 'push' && contains(github.ref, 'refs/tags/')
-      uses: peter-evans/repository-dispatch@v2
+      uses: peter-evans/repository-dispatch@v3
       with:
         token: ${{ secrets.RAW_CI_PAT }}
         event-type: release
         client-payload: '{"ref": "${{ github.ref }}", "tag": "${{ github.ref_name }}"}'
     - if: success() && github.event_name == 'repository_dispatch'
-      uses: peter-evans/create-or-update-comment@v2
+      uses: peter-evans/create-or-update-comment@v4
       with:
         token: ${{ secrets.RAW_CI_PAT }}
         repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
         comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
         body: |
-          > published
-          > run [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) success :heavy_check_mark:
+          > run [${{ github.run_id }}/${{ env.GITHUB_JOB }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) success :heavy_check_mark:
         reactions: hooray
     - if: failure() && github.event_name == 'repository_dispatch'
-      uses: peter-evans/create-or-update-comment@v2
+      uses: peter-evans/create-or-update-comment@v4
       with:
         token: ${{ secrets.RAW_CI_PAT }}
         repository: ${{ github.event.client_payload.github.payload.repository.full_name }}
         comment-id: ${{ github.event.client_payload.github.payload.comment.id }}
         body: |
-          > run [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed :x:
+          > run [${{ github.run_id }}/${{ env.GITHUB_JOB }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) failed :x:
         reactions: confused
