--- a/snapi-parser/pom.xml
+++ b/snapi-parser/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.raw-labs</groupId>
     <artifactId>raw-snapi-parser</artifactId>
 
-    <version>1.0.0-SNAPSHOT</version>
+    <version>${revision}</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -15,6 +15,7 @@
     <url>https://www.raw-labs.com/</url>
 
     <properties>
+        <revision>1.0.0-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>21</java.version>
         <antlr.version>4.13.1</antlr.version>
