refactor(snapi-parser)(build): build with maven (#383)
We move from `sbt` to `maven` in order to build `parsers` component

We now use the `antlr4-maven-plugin` directly to generate our parsers

--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,9 @@ snapi-client/version
 sql-client/version
 snapi-frontend/version
 snapi-truffle/version
-snapi-parser/version
+parsers/version
 python-client/version
-snapi-parser/src/main/java/raw/compiler/rql2/generated
-snapi-parser/src/main/java/raw/client/sql/generated
+parsers/src/main/java/raw/compiler/rql2/generated
+parsers/src/main/java/raw/client/sql/generated
+
+**/pom.xml.versionsBackup
