--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -31,7 +31,7 @@ jobs:
         ref: ${{ github.event.client_payload.pull_request.head.sha }}
         fetch-depth: 0
     - name: build all
-      run: ./rebuild.sh
+      run: ./rebuild.sh --release
     - name: sbt ci-release utils
       run: ./release.sh
       working-directory: utils
