fixup! specific sdk man step for code checks

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,6 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.READ_PACKAGES }}
     steps:
-      - run: echo $SHELL
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -64,7 +63,7 @@ jobs:
     runs-on: self-hosted
     container:
       image: ghcr.io/raw-labs/raw-scala-runner:21.0.0-ol9-20230919_scala2.12.18_sbt1.9.6
-      options: --user 1001
+      options: --user 1001 -e HOME=/home/sbtuser
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.READ_PACKAGES }}
@@ -75,7 +74,6 @@ jobs:
         shell: bash
         run: |
           export SDKMAN_DIR="$HOME/.sdkman"
-          [ ! -f "$SDKMAN_DIR/bin/sdkman-init.sh" ] && curl -s "https://get.sdkman.io?rcupdate=false" | bash
           source $HOME/.sdkman/bin/sdkman-init.sh
           yes n | sdk install java 21-graalce || true
           sdk use java 21-graalce
